play around with ESP32Servo

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,5 +10,8 @@
 
 [env:freenove_esp32_wrover]
 platform = espressif32
-board = freenove_esp32_wrover
+board = esp32dev
+;board = freenove_esp32_wrover
 framework = arduino
+
+lib_deps      = madhephaestus/ESP32Servo@^3.0.5
