--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,8 +10,20 @@
 
 [env:freenove_esp32_wrover]
 platform = espressif32
-board = esp32dev
-;board = freenove_esp32_wrover
+;board = esp32dev
+board = freenove_esp32_wrover
 framework = arduino
 
-lib_deps      = madhephaestus/ESP32Servo@^3.0.5
+build_flags =
+    -D CONFIG_ESP_COREDUMP_ENABLE=1
+    -D CONFIG_ESP_COREDUMP_TO_UART=1 
+    ;-DBOARD_HAS_PSRAM
+    ;-mfix-esp32-psram-cache-issue
+
+board_build.partitions = default_8MB.csv
+
+lib_deps =
+    madhephaestus/ESP32Servo@^3.0.5  ; ESP32Servo library
+    me-no-dev/ESPAsyncWebServer@^1.2 ; non‑blocking HTTP + WebSocket
+    me-no-dev/AsyncTCP@^1.1          ; transport layer for the server
+    bblanchon/ArduinoJson@^6.21.3    
