--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -14,13 +14,15 @@ platform = espressif32
 board = freenove_esp32_wrover
 framework = arduino
 
+monitor_speed = 115200
+
 build_flags =
     -D CONFIG_ESP_COREDUMP_ENABLE=1
     -D CONFIG_ESP_COREDUMP_TO_UART=1 
     ;-DBOARD_HAS_PSRAM
     ;-mfix-esp32-psram-cache-issue
 
-board_build.partitions = default_8MB.csv
+;board_build.partitions = default_8MB.csv
 
 lib_deps =
     madhephaestus/ESP32Servo@^3.0.5  ; ESP32Servo library
